--- a/TP2_ML/appClient/Views/Image/UploadImage.cshtml
+++ b/TP2_ML/appClient/Views/Image/UploadImage.cshtml
@@ -9,23 +9,19 @@
 <h4>Image</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="UploadImage">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group col-md-4">
                 <label asp-for="ImageData" class="control-label"></label>
-                <input type="file" asp-for="ImageData" class="form-control" />
+                <input type="file" asp-for="ImageData" class="form-control" accept=".png, .gif, .jpeg, .jpg, .webp" />
                 <span asp-validation-for="ImageData" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group col-md-4">
+                <input type="submit" value="Envoyer l'image" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
